put a valid input form that gets the client information. button doesn't have the price yet. Used bootstrap and JS functions.

--- a/style.css
+++ b/style.css
@@ -32,3 +32,15 @@ body {
 .icon {
     color: white;
 }
+
+.valid {
+    color: green;
+}
+
+.invalid {
+    color: red;
+}
+
+.different-white {
+    color: white;
+}
